--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>Collision</module>
         <module>Enemy</module>
         <module>Sound</module>
+        <module>CommonPlayer</module>
+        <module>CommonEnemy</module>
     </modules>
     <properties>
         <java>java</java>
