Skin module implemented!

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>Sound</module>
         <module>CommonPlayer</module>
         <module>CommonEnemy</module>
+        <module>Skin</module>
     </modules>
     <properties>
         <java>java</java>
