--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>CommonPlayer</module>
         <module>CommonEnemy</module>
         <module>Skin</module>
+        <module>ScoringSystem</module>
     </modules>
     <properties>
         <java>java</java>
